--- a/src/App.css
+++ b/src/App.css
@@ -149,14 +149,14 @@ body {
 }
 
 
-.xxx {
+.The-brilliant-part {
     width: 100%;
     height: 20px;
     background: #f7f7f7;
     background: linear-gradient(90deg,rgba(247, 247, 247, 1) 0%, rgba(203, 200, 200, 1) 23%, rgba(140, 133, 133, 1) 67%, rgba(255, 255, 255, 1) 100%);
 }
 
-.aaaa {
+.pallet {
     width: 50px;
     height: 50px;
     position: relative;
