--- a/src/App.css
+++ b/src/App.css
@@ -33,7 +33,7 @@ body {
   justify-content: space-between;
   flex-direction: column;
   position: relative;
-  box-shadow: 
+  box-shadow:
     0 10px 20px rgba(0, 0, 0, 0.1),
     inset 0 -5px 10px rgba(0, 0, 0, 0.05);
   overflow: hidden;
@@ -59,7 +59,7 @@ body {
   justify-content: space-between;
   overflow: hidden;
   position: relative;
-  box-shadow: 
+  box-shadow:
     inset 0 0 20px rgba(0, 0, 0, 0.8),
     0 5px 15px rgba(0, 0, 0, 0.3);
   z-index: 3;
@@ -118,7 +118,7 @@ body {
   flex-direction: column;
   position: absolute;
   z-index: 4;
-} 
+}
 
 .black {
   width: 245px;
@@ -150,18 +150,56 @@ body {
 
 
 .The-brilliant-part {
-    width: 100%;
-    height: 20px;
-    background: #f7f7f7;
-    background: linear-gradient(90deg,rgba(247, 247, 247, 1) 0%, rgba(203, 200, 200, 1) 23%, rgba(140, 133, 133, 1) 67%, rgba(255, 255, 255, 1) 100%);
+  width: 100%;
+  height: 20px;
+  background: #f7f7f7;
+  background: linear-gradient(90deg, rgba(247, 247, 247, 1) 0%, rgba(203, 200, 200, 1) 23%, rgba(140, 133, 133, 1) 67%, rgba(255, 255, 255, 1) 100%);
 }
 
 .pallet {
-    width: 50px;
-    height: 50px;
-    position: relative;
-    bottom: 10px;
-    border-radius: 1px 1px 10% 10%;
-    background: #f7f7f7;
-    background: linear-gradient(90deg,rgba(247, 247, 247, 1) 0%, rgba(203, 200, 200, 1) 23%, rgba(140, 133, 133, 1) 67%, rgba(255, 255, 255, 1) 100%);
+  width: 50px;
+  height: 50px;
+  position: relative;
+  bottom: 10px;
+  border-radius: 1px 1px 10% 10%;
+  background: #f7f7f7;
+  background: linear-gradient(90deg, rgba(247, 247, 247, 1) 0%, rgba(203, 200, 200, 1) 23%, rgba(140, 133, 133, 1) 67%, rgba(255, 255, 255, 1) 100%);
 }
+
+.coffee-button {
+  background-color: #333;
+  color: white;
+  border: none;
+  padding: 9px 9px;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 8px;
+  margin-bottom: 0px;
+  width: 70px;
+}
+
+.coffee-button:hover {
+  background-color: #555;
+}
+
+.coffee-buttons {
+  position: absolute;
+  top: 50%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 10px;
+}
+
+.coffee-buttons.left {
+  left: 4px;
+}
+
+.coffee-buttons.right {
+  right: 4px;
+}
+
+  .coffee-button.active {
+    background-color: gray;
+    color: white;
+  }
