--- a/src/App.css
+++ b/src/App.css
@@ -148,7 +148,6 @@ body {
   border-radius: 1px;
 }
 
-
 .The-brilliant-part {
   width: 100%;
   height: 20px;
@@ -199,7 +198,94 @@ body {
   right: 4px;
 }
 
-  .coffee-button.active {
-    background-color: gray;
-    color: white;
+.coffee-button.active {
+  background-color: gray;
+  color: white;
+}
+
+.white {
+  background-color: white;
+  width: 30px;
+  height: 300px;
+  z-index: 3;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -78%);
+  transition: transform 0.5s ease;
+}
+
+.white.active {
+  animation: milk-flow 2s forwards;
+}
+
+.white.finish {
+  bottom: 0;
+  top: auto;
+  transform: translate(-50%, 0%);
+  animation: milk-finish 2s forwards;
+}
+
+.ingredient-flow {
+  width: 30px;
+  height: 0px;
+  z-index: 3;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -78%);
+  transition: all 0.3s ease;
+  border-radius: 0 0 10px 10px;
+  opacity: 0;
+}
+
+.ingredient-flow.active {
+  height: 300px;
+  transform: translate(-50%, 0);
+  opacity: 1;
+  transition: all 0.3s ease;
+}
+
+.ingredient-flow.pouring {
+  animation: quick-pour 0.5s ease-out;
+}
+
+.ingredient-flow.finish {
+  animation: ingredient-finish 1s forwards;
+}
+
+@keyframes quick-pour {
+  0% {
+    height: 0px;
+    transform: translate(-50%, -78%);
+    opacity: 0;
   }
+  50% {
+    height: 150px;
+    transform: translate(-50%, -39%);
+    opacity: 0.7;
+  }
+  100% {
+    height: 300px;
+    transform: translate(-50%, 0);
+    opacity: 1;
+  }
+}
+
+@keyframes ingredient-finish {
+  0% {
+    height: 300px;
+    transform: translate(-50%, 0);
+    opacity: 1;
+  }
+  100% {
+    height: 0px;
+    transform: translate(-50%, 0);
+    opacity: 0;
+  }
+}
+
+.button:disabled {
+  opacity: 0.5;
+  cursor: not-allowed;
+}
